<resources>
    <string name="app_name">ShipmentSystem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectedProductColor">#F57C00</string>
    <string name="defaultProductColor">#FFAB91</string>
    <string name="selectedOrderItemColor">#1548C3</string>
    <string name="defaultOrderItemColor">#6288E4</string>

    <string name="created">"%1$s created!"</string>
    <string name="deleted">"%1$s deleted!"</string>
    <string name="updated">"%1$s updated!"</string>
    <string name="pleaseSelect">please select an item</string>
    <string name="product_name">Product Name:</string>
    <string name="product_price">Price:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="customer_order">Order:</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="query">Query</string>
    <string name="commit">Commit</string>
    <string name="date">Date</string>
    <string name="order_list">Order</string>
    <string name="ship_list">Ship</string>
    <string name="product_list">Product</string>
    <string name="delete_data">Delete all data</string>
    <string name="amount">Amount:</string>
    <string name="order_date">Order Date:</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_select_an_item">Please select an item</string>
    <string name="total">Total: $</string>
    <string name="items">items:</string>
    <string name="processing">Processing</string>
    <string name="complete">Complete</string>
    <string name="shipFragment">Ship</string>
    <string name="please_enter_name_or_items">Please enter name or items</string>
    <string name="edit_fragment">Edit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="price_sign">$</string>
    <string name="order_saved">"%1$s order saved."</string>
    <string name="order_in_processing">"%1$s order in processing."</string>
    <string name="clear_list">List cleared.</string>
    <string name="confirm_delete_all_Product">DELETE all Product?</string>
    <string name="confirm_delete_processingOrder">DELETE this order list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_search">Search select : </string>
    <string name="fragment_search_result">Search Result</string>
    <string name="search_count">"total [ %1$s ] data."</string>
    <string name="please_check_every_item">Please check every item.</string>
    <string name="complete_date">Complete Date:</string>
</resources>