<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/orderListFragment">
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.example.shipmentsystem.order.OrderFragment"
        android:label="@string/order_list"
         />
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.shipmentsystem.product.ProductFragment"
        android:label="@string/product_list" />
    <fragment
        android:id="@+id/shipFragment"
        android:name="com.example.shipmentsystem.ship.ShipFragment"
        android:label="@string/shipFragment" >
        <action
            android:id="@+id/action_shipFragment_to_editFragment"
            app:destination="@id/editFragment" />
        <action
            android:id="@+id/action_shipFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.shipmentsystem.ship.edit.EditFragment"
        android:label="@string/edit_fragment"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="processingItem"
            app:argType="com.example.shipmentsystem.db.ProcessingItem"
             />
        <action
            android:id="@+id/action_editFragment_to_shipFragment"
            app:destination="@id/shipFragment" />
        <action
            android:id="@+id/action_editFragment_to_shipFragment2"
            app:destination="@id/shipFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.example.shipmentsystem.search.SearchResultFragment"
        android:label="@string/fragment_search_result"
        tools:layout="@layout/fragment_search_result" >
        <action
            android:id="@+id/action_searchResultFragment_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>
</navigation>